[package]
name = "cita-tool"
version = "0.21.0"
authors = [
    "piaoliu <441594700@qq.com>",
    "Qian Linfeng <thewawar@gmail.com>",
    "Yao Pengfei <yuitta@gmail.com>"
]
edition = "2021"

[dependencies]
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
futures = "0.3.26"
serde_json = "1.0.17"
serde = "1.0.53"
serde_derive = "1.0.53"
protobuf = "=2.8.1"
hex = "0.4"
rustc-hex = "2.0"
tiny-keccak = "2.0.2"
secp256k1 = { version = "0.27", features = ["recovery", "global-context", "rand-std"]}
blake2b_simd = "1.0.0"
sha2 = "0.10.6"
libsm = { version = "0.3.0", package = "cryptape-sm" }
# rename to types
types = { version = "0.14.1", package = "ethereum-types"}
lazy_static = "1.0"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
failure = "0.1.1"
ethabi = "18.0.0"
tool-derive = { path = "../tool-derive" }
hyper-rustls = { version = "0.24", features = [], optional = true }
hyper-tls = { version = "0.5", optional = true }

[features]
default = ["rustls"]
openssl = ["hyper-tls"]
rustls = ["hyper-rustls"]
